<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorPrimaryDark"
    tools:context=".CovidTips">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:background="@drawable/curved_buttom"
            android:orientation="horizontal">
        </LinearLayout>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="50dp"
            app:cardElevation="20dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="-110dp">

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="WHY WASH HANDS?"
                        android:fontFamily="@font/life"
                        android:textColor="@color/text_color"
                        android:gravity="center"
                        android:layout_marginBottom="20dp"
                        android:textSize="16sp"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/why_wash"
                        android:textColor="@color/colorAccent"
                        android:gravity="center"
                        android:fontFamily="@font/life"
                        android:textSize="14sp"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/social_distance"
                        android:fontFamily="@font/life"
                        android:textColor="@color/text_color"
                        android:gravity="center"
                        android:layout_marginTop="30dp"
                        android:layout_marginBottom="20dp"
                        android:textSize="16sp"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/why_social_distancing"
                        android:textColor="@color/colorAccent"
                        android:gravity="center"
                        android:fontFamily="@font/life"
                        android:textSize="14sp"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/touching_face"
                        android:fontFamily="@font/life"
                        android:textColor="@color/text_color"
                        android:gravity="center"
                        android:layout_marginTop="30dp"
                        android:layout_marginBottom="20dp"
                        android:textSize="16sp"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/why_touching_face"
                        android:textColor="@color/colorAccent"
                        android:gravity="center"
                        android:fontFamily="@font/life"
                        android:textSize="14sp"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/stayhome"
                        android:fontFamily="@font/life"
                        android:textColor="@color/text_color"
                        android:gravity="center"
                        android:layout_marginTop="30dp"
                        android:layout_marginBottom="20dp"
                        android:textSize="16sp"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/why_stayhome"
                        android:textColor="@color/colorAccent"
                        android:gravity="center"
                        android:fontFamily="@font/life"
                        android:textSize="14sp"/>


                </LinearLayout>
            </ScrollView>
        </android.support.v7.widget.CardView>
    </LinearLayout>



</LinearLayout>